# percept

./: CMakeLists.txt  README.md  build.bat
backup/: backups.txt
include/: imgui_bindings.h  input.h  oal_bindings.h  window.h
release/: percept.pyd  release.txt
src/: imgui_flag_bindings.cpp  imgui_func_bindings.cpp  imgui_struct_bindings.cpp  input.cpp  oal_bindings.cpp  percept.cpp  window.cpp
